[package]
name = "forma-core"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "math for note"
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/linq-core"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.149", features = ["derive"] }

