[package]
name = "mathy-parser"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Notedown Text parser"
repository = "https://github.com/notedge/notedown-rs"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2021"
publish = false

[dependencies]
pex = { version = "0.2.4", features = ["regex"] }


#[dependencies.forma-core]
#version = "0.0.*"
#path = "../forma-core"
#features = []

[dev-dependencies]
