[package]
name = "forma-wasm"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/linq-core"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
itertools = "0.10.5"
tokio = { version = "1.23.0", features = ["full"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
chrono = { version = "0.4.23", features = ["serde"] }
mockall = "0.11.3"


[dev-dependencies]

[features]
default = []
