[package]
name = "mathy-wasm"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/linq-core"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.28.1", features = ["full"] }

[dev-dependencies]

[features]
default = []
