[package]
name = "game-orm"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/linq-core"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.149", features = ["derive"] }

[dependencies.sea-orm]
version = "0.10.5"
features = ["runtime-tokio-rustls", "sqlx-postgres"]

#[dependencies.sqlx]
#version = "0.6.2"
#features = ["runtime-tokio-rustls", "uuid", "chrono", "postgres"]