[package]
name = "game-server"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/linq-core"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
itertools = "0.10.5"
tokio = { version = "1.23.0", features = ["full"] }

#[dependencies.sqlx]
#version = "0.6.2"
#features = ["runtime-tokio-rustls", "uuid", "chrono", "postgres"]

[dependencies.sea-orm]
version = "0.10.5"
features = ["runtime-tokio-rustls", "sqlx-postgres"]

[dependencies.game-orm]
path = "../game-orm"

[dev-dependencies]

[features]
default = []
